adding 'Lwt' module and a default value to Base.track 'callback'

--- a/src/dune
+++ b/src/dune
@@ -1,12 +1,12 @@
 (rule
- (targets mixpanel.ml)
- (deps mixpanel.mli)
+ (targets base.ml)
+ (deps base.mli)
  (action (run %{bin:gen_js_api} %{deps})))
 
 (library
  (public_name mixpanel)
  (name mixpanel)
  (modes byte)
- (libraries gen_js_api js_of_ocaml js_of_ocaml-ppx)
- (preprocess (pps js_of_ocaml-ppx))
+ (libraries gen_js_api js_of_ocaml js_of_ocaml-ppx lwt_ppx)
+ (preprocess (pps js_of_ocaml-ppx lwt_ppx))
 )
