--- a/mixpanel.opam
+++ b/mixpanel.opam
@@ -14,4 +14,5 @@ depends: [
   "gen_js_api"
   "js_of_ocaml" {>= "3.8.0" & < "3.9.0"}
   "js_of_ocaml-ppx" {>= "3.8.0" & < "3.9.0"}
+  "lwt_ppx" {>= "2.0.1" & < "2.1.0"}
   ]
