--- a/mixpanel.opam
+++ b/mixpanel.opam
@@ -12,7 +12,7 @@ build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
 depends: [
   "ocaml" { >= "4.08.0" }
   "gen_js_api"
-  "js_of_ocaml" {>= "3.8.0" & < "3.9.0"}
-  "js_of_ocaml-ppx" {>= "3.8.0" & < "3.9.0"}
-  "lwt_ppx" {>= "2.0.1" & < "2.1.0"}
+  "js_of_ocaml"
+  "js_of_ocaml-ppx"
+  "lwt_ppx"
   ]
